# pyright-mcp-server

./: .gitignore  PHASE3_COMPLETION_REPORT.md  README.md  STATUS.md  pyproject.toml
docs/: IMPLEMENTATION.md  METRICS.md  PRD.md  TDD.md  design-alignment-summary.md
docs/decisions/: ADR-001-automatic-lsp-idle-timeout.md  ADR-002-pyright-version-tracking.md  ADR-003-per-workspace-metrics.md  ADR-004-lsp-pool-sizing-strategy.md  ADR-005-simplified-timeout-strategy.md  ADR-006-no-tool-level-caching.md  README.md
src/pyright_mcp/: __init__.py  __main__.py  config.py  logging_config.py  metrics.py  server.py
src/pyright_mcp/backends/: __init__.py  base.py  cli_runner.py  document_manager.py  lsp_client.py  lsp_pool.py  selector.py
src/pyright_mcp/context/: __init__.py  project.py
src/pyright_mcp/tools/: __init__.py  check_types.py  completions.py  definition.py  health_check.py  hover.py  references.py
src/pyright_mcp/utils/: __init__.py  position.py  uri.py
src/pyright_mcp/validation/: __init__.py  inputs.py  paths.py
tests/: __init__.py  conftest.py
tests/integration/: test_check_types.py  test_hover_definition.py  test_phase3_features.py
tests/unit/: test_cli_runner.py  test_config.py  test_definition.py  test_document_manager.py  test_health_check.py  test_hover.py  test_logging_config.py  test_lsp_client.py  test_lsp_pool.py  test_metrics.py  test_position.py  test_project.py  test_selector.py  test_server.py  test_uri.py  test_validation.py
