[project]
name = "pyright-mcp"
version = "0.1.0"
description = "MCP server providing Pyright type checking capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "pyright-mcp contributors" }
]
keywords = ["mcp", "pyright", "type-checking", "python", "language-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.1.0",
    "pyright>=1.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
pyright-mcp = "pyright_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyright_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=pyright_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["src/pyright_mcp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN204", # Missing return type annotation for special method __init__
    "ANN401", # Dynamically typed expressions (Any)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "TID252", # Allow relative imports (used throughout codebase)
    "G004",   # Allow f-strings in logging (used throughout codebase)
    "G201",   # Allow logger.error with exc_info (used throughout codebase)
    "TC003",  # Allow standard library imports outside TYPE_CHECKING
    "TC006",  # Type expression in cast (used throughout codebase)
    "E501",   # Line too long (managed manually)
    "E402",   # Module level import not at top (TYPE_CHECKING imports)
    "B904",   # raise from in except clause (used throughout codebase)
    "PLC0415", # Import not at top of file (lazy imports for startup time)
    "PLW0603", # Global statement (used for singletons)
    "PLW2901", # Loop variable overwritten (used in path validation)
    "ARG001", # Unused function argument (protocol compliance)
    "ARG002", # Unused method argument (protocol compliance)
    "SIM105", # contextlib.suppress (prefer explicit try/except)
    "SIM110", # any() in loop (prefer explicit for readability)
    "DTZ005", # datetime.now() without tz (log files don't need tz)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # No type annotations required in tests
    "ARG",     # Unused arguments OK in test fixtures
    "PLR2004", # Magic values OK in tests
    "PLC0415", # Import not at top of file OK in tests
    "PTH",     # Pathlib not required in tests
]

[tool.ruff.lint.isort]
known-first-party = ["pyright_mcp"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
